# pyObscuraProto

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  README.ru.md  dev-requirements.txt  pyproject.toml  setup.py
.github/workflows/: autotests.yml  pypi_publish.yml
docs/: development_guide.md
examples/: python_websocket_example.py
examples/request_response_example/: client_example.py  server_example.py
src/ObscuraProto/: __init__.py  bindings.cpp
tests/: test_auto_unpacking.py  test_bindings.py  test_config.py  test_websocket_session.py
